feat: new icons

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="container">
                     <div class="row text-center">
-                        <div class="skill-box col-6 col-lg-2">
+                        <!-- <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/html.png">
@@ -252,7 +252,7 @@
                                     <img class="img-fluid" src="./img/skills/bootstrap.png">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
@@ -281,13 +281,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-2">
+                        <!-- <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/angular.png">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
@@ -295,13 +295,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-2">
+                        <!-- <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/react.jpg">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
