refactor: update myself text

--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
                         </h2>
                         <div class="paragraph py-4 w-75">
                             <p class="para">
-                                My name is Warlen Pinheiro, I am graduated in systems 
-                                analysis and development with a postgraduate degree in 
-                                full stack web development.
+                                My name is Warlen Pinheiro, I have a degree in Computer Science and in 
+                                systems analysis and development with a postgraduate degree in full stack 
+                                web development.
+
                             </p>
                             <p class="para">
                                 I am passionate about the world of programming and always 
