--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 developed by the community.
                             </p>
                         </div>
-                        <a href="https://www.linkedin.com/in/warlen-pinheiro-96261590/" class="btn button primary-button text-uppercase">View CV in LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/warlen-pinheiro/" class="btn button primary-button text-uppercase">View CV in LinkedIn</a>
                     </div>
                 </div>
             </div>
