--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text text-uppercase">I am Warlen</h1>
-                        <h4 class="title-text text-uppercase">Software Enginner</h4>
+                        <h4 class="title-text text-uppercase">Software Engineer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
                                 <a href="https://github.com/warlenpinheiro" class="btn button primary-button mr-4 text-uppercase"><i class="fab fa-github-alt" style="position: absolute; left: 5px; margin: 3px;"></i>GitHub
@@ -141,7 +141,7 @@
                                 <span class="timeline">
                                     <div class="timeline-icon"><i class="fa fa-heart"></i></div>
                                     <div class="timeline-content">
-                                        <h3 class="title">Software Enginner<br/><small>Gerencianet<br/> Nov/20 - Present</small></h3>
+                                        <h3 class="title">Software Engineer<br/><small>Gerencianet<br/> Nov/20 - Present</small></h3>
                                         <p class="description d-none d-md-block">
                                             Gerencianet is a wonderful company, where I've been learning better to build and maintain systems 
                                             with a total focus on quality, usability, scalability and performance. Here I've been learning a lot
